# FxScalpBot

./: .env.example  .gitignore  README.md
config/: risk_limits.toml  strategy_params.toml
python_strategy/: pyproject.toml
python_strategy/src/: __init__.py  momentum_detector.py  mt5_connector.py  reversion_detector.py  scale_calculator.py  trade_qualifier.py  trading_service.py  volatility_filter.py
python_strategy/tests/: test_momentum_detector.py  test_reversion_detector.py
rust_core/: Cargo.toml
rust_core/src/: bridge_client.rs  kill_switch.rs  lib.rs  main.rs  order_executor.rs  python_bridge.rs  risk_enforcer.rs  scanner.rs  state_machine.rs  tick_ingestion.rs  trade_journal.rs  trade_manager.rs
rust_core/tests/: bridge_tests.rs  integration_tests.rs
