[package]
name = "fx_scalp_core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for momentum scalping system"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std"] }

# Numeric precision
rust_decimal = { version = "1.33", features = ["serde"] }

[features]
default = []

[lib]
name = "fx_scalp_core"
crate-type = ["rlib"]

[[bin]]
name = "fx_scalp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
